--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <a href="#home" class="nav-link">Home</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#services" class="nav-link">Services</a>
-            <a href="#contact" class="nav-link">Contact</a>
+            <a href="contact.html" class="nav-link">Contact</a>
         </nav>
     </header>
 
