--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adii's Website</title>
+    <title>Adii's portfolio</title>
 <!-- Favicon (GIF) -->
     <link rel="icon" type="image/x-icon" href="images/">
     <!-- Link to Google Fonts for typography -->
