--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <!-- Header -->
     <header>
         <div class="logo">Adii</div>
         <nav>
-            <a href="index.html" class="nav-link">Home</a>
+            <a href="home.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link">About</a>
             <a href="services.html" class="nav-link">Services</a>
             <a href="contact.html" class="nav-link active">Contact</a>
         </nav>
     </header>
+
+    <div class="video-background">
+        <video autoplay loop muted>
+            <source src="images/100video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 
     <!-- Contact Section -->
     <section class="contact-section">
@@ -27,9 +35,9 @@
                 Thank you for visiting! If you’d like to collaborate or get in touch, feel free to reach out to me through the provided channels.
             </p>
             <div class="social-links">
-                <a href="#" class="social-icon" title="Follow on Instagram">Instagram</a>
-                <a href="#" class="social-icon" title="Follow on GitHub">GitHub</a>
-                <a href="#" class="social-icon" title="Subscribe on YouTube">YouTube</a>
+                <a href="https://instagram.com/_adii777" class="social-icon" title="Follow on Instagram">Instagram</a>
+                <a href="https://github.com/Maniac0001" class="social-icon" title="Follow on GitHub">GitHub</a>
+                <a href="https://youtube.com/@sndkkss" class="social-icon" title="Subscribe on YouTube">YouTube</a>
             </div>
         </div>
     </section>
