--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
                 Thank you for visiting! If you’d like to collaborate or get in touch, feel free to reach out to me through the provided channels.
             </p>
             <div class="social-links">
-                <a href="https://instagram.com/_adii777" class="social-icon" title="Follow on Instagram">Instagram</a>
-                <a href="https://github.com/Maniac0001" class="social-icon" title="Follow on GitHub">GitHub</a>
-                <a href="https://youtube.com/@sndkkss" class="social-icon" title="Subscribe on YouTube">YouTube</a>
+                <a href="https://instagram.com/_adii777" target="_blank" class="social-icon" title="Follow on Instagram">Instagram</a>
+                <a href="https://github.com/Maniac0001" target="_blank" class="social-icon" title="Follow on GitHub">GitHub</a>
+                <a href="https://youtube.com/@sndkkss" target="_blank" class="social-icon" title="Subscribe on YouTube">YouTube</a>
             </div>
         </div>
     </section>
