--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
         <p>&copy; 2024 Adii. All Rights Reserved.</p>
     </div>
 
-    <!-- Social Media Icons -->
+    <!-- Social Media Iacons -->
     <div class="footer-social">
         <a href="https://instagram.com/_adii777" target="_blank" class="social-icon">
             <img src="images/instagram.png" alt="Instagram">
