--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <header>
         <div class="logo">Adii</div>
         <nav>
-            <a href="#home" class="nav-link">Home</a>
+            <a href="#home" class="nav-link active">Home</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#services" class="nav-link">Services</a>
             <a href="contact.html" class="nav-link">Contact</a>
