--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,29 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 Adii. All Rights Reserved.</p>
+        <footer>
+            <div class="footer-text">
+                <p>&copy; 2024 Adii. All Rights Reserved.</p>
+            </div>
+    
+            <div class="footer-social">
+                <a href="https://instagram.com/_adii777" target="_blank" class="social-icon">
+                    <img src="images/instagram.png" alt="Instagram">
+                </a>
+                <a href="https://github.com/Maniac0001" target="_blank" class="social-icon">
+                    <img src="images/github.png" alt="GitHub">
+                </a>
+                <a href="https://youtube.com/@sndkkss" target="_blank" class="social-icon">
+                    <img src="images/youtube.png" alt="YouTube">
+                </a>
+            </div>
+        </footer>
+
+    <!-- Optional JavaScript to make it interactive -->
+    <script src="script.js"></script>
+</body>
+</html>
+
     </footer>
 </body>
 </html>
