--- a/about.html
+++ b/about.html
@@ -12,20 +12,19 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-
     <!-- Header with Logo -->
     <header>
         <div class="logo">Adii</div>
         <nav>
             <a href="home.html" class="nav-link">Home</a>
-            <a href="#about" class="nav-link">About</a>
+            <a href="#about" class="nav-link active">About</a>
             <a href="#projects" class="nav-link">Projects</a>
             <a href="contact.html" class="nav-link">Contact</a>
         </nav>
     </header>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="about" class="full-page">
         <div class="container">
             <div class="about-section">
                 <h1>About Me</h1>
@@ -57,10 +56,6 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-text">
-            <p>&copy; 2024 Adii. All Rights Reserved.</p>
-        </div>
-
         <div class="footer-social">
             <a href="https://instagram.com/_adii777" target="_blank" class="social-icon">
                 <img src="images/instagram.png" alt="Instagram">
@@ -73,3 +68,6 @@
             </a>
         </div>
     </footer>
+    <script src="script.js"></script>
+</body>
+</html>
