--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         <div class="logo">Adii</div>
         <nav>
             <a href="#home" class="nav-link active">Home</a>
-            <a href="#about" class="nav-link">About</a>
+            <a href="about.html" class="nav-link">About</a>
             <a href="#services" class="nav-link">Services</a>
             <a href="contact.html" class="nav-link">Contact</a>
         </nav>
