--- a/about.html
+++ b/about.html
@@ -23,6 +23,49 @@
         </nav>
     </header>
 
+    <div id="particle-container"></div>
+    <script>
+        const container = document.getElementById("particle-container");
+        for (let i = 0; i < 100; i++) {
+            const particle = document.createElement("div");
+            particle.className = "particle";
+            container.appendChild(particle);
+        }
+    </script>
+    <style>
+        #particle-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            overflow: hidden;
+        }
+        .particle {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 5px;
+            height: 5px;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 50%;
+            animation: float 10s infinite;
+        }
+        @keyframes float {
+            0% {
+                transform: translate(0, 0) scale(1);
+            }
+            50% {
+                transform: translate(calc(-50vw + 100px), calc(-50vh + 100px)) scale(0.8);
+            }
+            100% {
+                transform: translate(calc(50vw - 100px), calc(50vh - 100px)) scale(1);
+            }
+        }
+    </style>
+    
+
     <!-- About Section -->
     <section id="about" class="full-page">
         <div class="container">
