--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Information</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="info.css">
 </head>
 
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="home.html">Football Blog</a>
+                <a href="homehtml">Football Blog</a>
             </div>
             <nav>
                 <ul>
@@ -27,19 +27,35 @@
         </nav>
     </header>
 
-    <!-- Info Section -->
+    <!-- Football Information Section -->
     <section class="info-section">
         <div class="info-container">
             <h2>Football: The Beautiful Game</h2>
-            <p>Football, or soccer in some countries, is the most popular sport in the world, played by millions in 
-            every corner of the globe. The game is played with a spherical ball, typically with two teams of 11 
-            players each. The objective of the game is to score more goals than the opponent, which is achieved by 
-            getting the ball into the opposing team's net. The simplicity of football, combined with its exciting 
-            fast-paced nature, makes it beloved by fans worldwide.</p>
-            <p>Whether it's the intense drama of the FIFA World Cup or the local street football games, football 
-            brings people together, transcending language, culture, and geographic boundaries. From legendary players 
-            like Pele and Maradona to modern icons like Messi and Ronaldo, football has produced countless moments of 
-            magic that will be remembered for generations.</p>
+            <p>Football, also known as soccer in some countries, is a global sport enjoyed by millions. Played with a spherical ball, the goal is to score more goals than the opponent. It’s loved for its simplicity, yet it’s full of excitement.</p>
+        </div>
+    </section>
+
+    <!-- World Cup History Section -->
+    <section class="info-section">
+        <div class="info-container">
+            <h2>World Cup History</h2>
+            <p>The FIFA World Cup is the pinnacle of international football. First held in 1930, it has produced legendary matches, with Brazil being the most successful team, winning five times. The World Cup brings together the best of the best from every corner of the globe.</p>
+        </div>
+    </section>
+
+    <!-- Best Players Section -->
+    <section class="info-section">
+        <div class="info-container">
+            <h2>Best Players in Football History</h2>
+            <p>Throughout history, players like Pelé, Lionel Messi, and Cristiano Ronaldo have redefined football. These players have not only broken records but have also shaped the sport in their own unique ways, earning legendary status.</p>
+        </div>
+    </section>
+
+    <!-- Iconic Football Matches -->
+    <section class="info-section">
+        <div class="info-container">
+            <h2>Iconic Football Matches</h2>
+            <p>From the unforgettable 1998 World Cup final between Brazil and France to the Champions League comeback of Liverpool in 2005, some football matches are etched in history as true spectacles of the sport.</p>
         </div>
     </section>
 
