--- a/home.html
+++ b/home.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adi's Football Corner</title>
     <link rel="stylesheet" href="home.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://example.com/fonts/benguiat.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- Navigation Bar -->
     <header class="navbar">
@@ -26,43 +29,20 @@
         <div class="hero-content">
             <h1>Welcome to <span>Adi's Football Corner</span></h1>
             <p>Your one-stop hub for everything football—players, teams, and the latest updates. Dive in and explore!</p>
-            <a href="#about" class="btn">Learn More</a>
+            <a href="#about" class="btn btn-hero">Learn More</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Us</h2>
-        <p>
-            Football isn't just a game; it's a way of life. At Adi's Football Corner, we bring you the passion and stories of football. Whether you're a fan of legendary players or upcoming stars, we’ve got you covered.
-        </p>
-    </section>
-
-    <!-- Gallery Section -->
-    <section class="gallery">
-        <h2>Gallery</h2>
-        <div class="gallery-container">
-            <div class="card glass">
-                <img src="image1.jpg" alt="Football Stadium">
-                <p>Stadium Nights</p>
-            </div>
-            <div class="card glass">
-                <video autoplay muted loop>
-                    <source src="video.mp4" type="video/mp4">
-                </video>
-                <p>Player in Action</p>
-            </div>
-            <div class="card glass">
-                <img src="image2.jpg" alt="Football Match">
-                <p>Epic Matches</p>
-            </div>
-        </div>
+        <p>Football isn't just a game; it's a way of life. At Adi's Football Corner, we bring you the passion and stories of football. Whether you're a fan of legendary players or upcoming stars, we’ve got you covered.</p>
     </section>
 
     <!-- Call to Action -->
     <section class="cta">
-        <h2>Join the Football Fanbase</h2>
-        <p>Stay updated with the latest football news and stories.</p>
+        <h2>Players</h2>
+        <p>View your favourite player's information here.</p>
         <a href="players.html" class="btn btn-primary">Explore Players</a>
     </section>
 
@@ -72,4 +52,5 @@
         <p>Designed with ❤️ by Adi.</p>
     </footer>
 </body>
+
 </html>
