--- a/info.html
+++ b/info.html
@@ -1,69 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Information</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Adi's Football Corner - Info</title>
     <link rel="stylesheet" href="info.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Karla:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
     <!-- Navbar -->
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <a href="homehtml">Football Blog</a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="players.html">Players</a></li>
-                    <li><a href="info.html" class="active">Info</a></li>
-                </ul>
-            </nav>
+    <header class="navbar">
+        <h1 class="logo">Adi's Football Corner</h1>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="players.html">Players</a></li>
+                <li><a href="info.html" class="active">Info</a></li>
+            </ul>
         </nav>
     </header>
 
-    <!-- Football Information Section -->
-    <section class="info-section">
-        <div class="info-container">
-            <h2>Football: The Beautiful Game</h2>
-            <p>Football, also known as soccer in some countries, is a global sport enjoyed by millions. Played with a spherical ball, the goal is to score more goals than the opponent. It’s loved for its simplicity, yet it’s full of excitement.</p>
-        </div>
-    </section>
-
-    <!-- World Cup History Section -->
-    <section class="info-section">
-        <div class="info-container">
+    <!-- Main Content -->
+    <main>
+        <section class="container">
             <h2>World Cup History</h2>
-            <p>The FIFA World Cup is the pinnacle of international football. First held in 1930, it has produced legendary matches, with Brazil being the most successful team, winning five times. The World Cup brings together the best of the best from every corner of the globe.</p>
-        </div>
-    </section>
+            <p>Discover the rich history of the FIFA World Cup, the greatest football tournament in the world.</p>
+            <a href="world-cup-history.html" class="read-more-btn">Read More</a>
+        </section>
 
-    <!-- Best Players Section -->
-    <section class="info-section">
-        <div class="info-container">
-            <h2>Best Players in Football History</h2>
-            <p>Throughout history, players like Pelé, Lionel Messi, and Cristiano Ronaldo have redefined football. These players have not only broken records but have also shaped the sport in their own unique ways, earning legendary status.</p>
-        </div>
-    </section>
+        <section class="container">
+            <h2>Legendary Players</h2>
+            <p>Explore the careers of football legends, from Pelé and Maradona to Messi and Ronaldo.</p>
+            <a href="legendary-players.html" class="read-more-btn">Read More</a>
+        </section>
 
-    <!-- Iconic Football Matches -->
-    <section class="info-section">
-        <div class="info-container">
-            <h2>Iconic Football Matches</h2>
-            <p>From the unforgettable 1998 World Cup final between Brazil and France to the Champions League comeback of Liverpool in 2005, some football matches are etched in history as true spectacles of the sport.</p>
-        </div>
-    </section>
+        <section class="container">
+            <h2>Evolution of Football</h2>
+            <p>How has football evolved over the years? Learn about the changes in tactics, rules, and gameplay.</p>
+            <a href="evolution-of-football.html" class="read-more-btn">Read More</a>
+        </section>
+
+        <section class="container">
+            <h2>The Rise of Women's Football</h2>
+            <p>Learn about the rise of women's football and the key milestones in its journey.</p>
+            <a href="womens-football.html" class="read-more-btn">Read More</a>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Football Blog | All Rights Reserved</p>
+        <p>&copy; 2024 Adi's Football Corner. All rights reserved.</p>
     </footer>
-
 </body>
-
 </html>
