--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
                 <li><a href="home.html" class="active">Home</a></li>
                 <li><a href="players.html">Players</a></li>
                 <li><a href="info.html">Info</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
