--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <!-- Navigation Bar -->
     <header class="navbar">
         <div class="navbar-container">
-            <h1 class="logo">Adi's Football Corner</h1>
+            <h1 class="logo">Football Corner</h1>
             <nav>
                 <ul>
                     <li><a href="home.html" class="active">Home</a></li>
