--- a/home.html
+++ b/home.html
@@ -12,7 +12,8 @@
     <!-- Navigation Bar -->
     <header class="navbar">
         <div class="navbar-container">
-            <h1 class="logo">Football Corner</h1>
+            <img class="navbar-gif" src="images/icon.gif" alt="Football Corner Logo">
+
             <nav>
                 <ul>
                     <li><a href="home.html" class="active">Home</a></li>
