--- a/home.html
+++ b/home.html
@@ -34,12 +34,14 @@
         </div>
 
         <!-- About Content Inside Home -->
+         <section id="about">
         <div class="about-content">
             <h2>About Us</h2>
             <p>
                 Football isn't just a game; it's a way of life. At Adi's Football Corner, we bring you the passion and stories of football. Whether you're a fan of legendary players or upcoming stars, we’ve got you covered.
             </p>
         </div>
+         </section>
     </section>
 
     <!-- Footer -->
@@ -60,5 +62,22 @@
             });
         });
     </script>
+
+<script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            const target = document.querySelector(this.getAttribute('href'));
+            if (target) {
+                target.scrollIntoView({
+                    behavior: 'smooth',
+                    block: 'start' // Align the target section to the top
+                });
+            }
+        });
+    });
+</script>
+
+
 </body>
 </html>
