--- a/players.html
+++ b/players.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        <h1 class="logo">Adi's Football Corner</h1>
+        <img class="navbar-gif" src="images/icon.gif" alt="Football Corner Logo">
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
