--- a/players.html
+++ b/players.html
@@ -20,15 +20,28 @@
         </nav>
     </header>
 
-    <!-- Search Section -->
     <section class="search-section">
         <h2>Discover Footballers</h2>
         <p>Search for any footballer and learn more about their journey!</p>
-        <div class="search-bar">
-            <input type="text" id="search-input" placeholder="Search for players..." />
-            <button id="search-btn">Search</button>
+        <div class="group">
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="search-icon">
+                <g>
+                    <path
+                        d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"
+                    ></path>
+                </g>
+            </svg>
+            <input
+                id="search-input"
+                class="input"
+                type="search"
+                placeholder="Search for players..."
+                name="searchbar"
+            />
+            <button id="search-btn" style="display: none;">Search</button>
         </div>
     </section>
+    
 
     <section class="player-list">
         <h2>Players</h2>
