--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>Contact - Adi's Football Corner</title>
     <link rel="stylesheet" href="contact.css">
 </head>
+
 <body>
     <!-- Header Section -->
     <header class="navbar">
@@ -28,7 +30,8 @@
         <div class="container">
             <div class="text-content">
                 <h2>Get in Touch</h2>
-                <p>Feel free to reach out for any football-related inquiries, collaborations, or just to chat about the beautiful game!</p>
+                <p>Feel free to reach out for any football-related inquiries, collaborations, or just to chat about the
+                    beautiful game!</p>
                 <p>You can contact us through social media or email. We're always here to help!</p>
             </div>
             <div class="contact-info">
@@ -36,7 +39,8 @@
                 <ul>
                     <li><strong>Email:</strong> infinityabs4@gmail.com </li>
                     <li><strong>Phone:</strong> Could not share due to security reasons</li>
-                    <li><strong>Social:</strong> <a href="https://github.com/Maniac0001">GitHub</a>, <a href="https://instagram.com/_adii777/">Instagram</a></li>
+                    <li><strong>Social:</strong> <a href="https://github.com/Maniac0001">GitHub</a>, <a
+                            href="https://instagram.com/_adii777/">Instagram</a></li>
                 </ul>
             </div>
         </div>
@@ -50,7 +54,7 @@
     <!-- Smooth Scrolling JS -->
     <script>
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
+            anchor.addEventListener('click', function (e) {
                 e.preventDefault();
                 document.querySelector(this.getAttribute('href')).scrollIntoView({
                     behavior: 'smooth'
@@ -59,4 +63,5 @@
         });
     </script>
 </body>
+
 </html>
