--- a/home.html
+++ b/home.html
@@ -9,21 +9,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <header class="navbar">
-        <div class="navbar-container">
-            <img class="navbar-gif" src="images/icon.gif" alt="Football Corner Logo">
 
-            <nav>
-                <ul>
-                    <li><a href="home.html" class="active">Home</a></li>
-                    <li><a href="players.html">Players</a></li>
-                    <li><a href="info.html">Info</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <!-- Navigation Bar -->
+<header class="navbar">
+    <div class="navbar-container">
+        <img class="navbar-gif" src="images/icon.gif" alt="Football Corner Logo">
+        <nav>
+            <ul>
+                <li><a href="home.html" class="active">Home</a></li>
+                <li><a href="players.html">Players</a></li>
+                <li><a href="info.html">Info</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
 
     <!-- Home Section (Full Height) -->
     <section class="home">
@@ -77,7 +78,7 @@
         });
     });
 </script>
-
+<script src="script.js"></script>
 
 </body>
 </html>
