--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact - Adi's Football Corner</title>
+    <title>Contact - Football Corner</title>
     <link rel="stylesheet" href="contact.css">
 </head>
 
