--- a/info.html
+++ b/info.html
@@ -7,7 +7,6 @@
     <title>Adi's Football Corner - Info</title>
     <link rel="stylesheet" href="info.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -73,6 +72,14 @@
             </div>
         </div>
 
+        <!-- Social Media Links -->
+        <div class="social-links">
+            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2024 Adi's Football Corner. All rights reserved. Designed with ❤️ by Adi.</p>
@@ -93,10 +100,10 @@
         });
     </script>
 
-    <!-- Scroll to Top Button -->
-    <button id="scrollToTopBtn" title="Go to top">↑</button>
-    
-    <script src="info.js"></script>
+<!-- Scroll to Top Button -->
+<button id="scrollToTopBtn" title="Go to top">↑</button>
+
+<script src="info.js"></script>
 
 </body>
 </html>
