--- a/info.html
+++ b/info.html
@@ -70,13 +70,11 @@
             </div>
         </div>
 
-        <!-- Social Media Links -->
-        <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-        </div>
-    </section>
+         <!-- New Section for Opinions -->
+    <div class="opinions-section">
+        <h3>Wanna Share Your Opinions?</h3>
+        <a href="surveys.html" class="btn">Take the Survey</a>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
