--- a/info.html
+++ b/info.html
@@ -70,16 +70,16 @@
             </div>
         </div>
 
+        <footer>
+            <p>&copy; 2024 Adi's Football Corner. All rights reserved.</p>
+            <p>Designed with ❤️ by Adi.</p>
+        </footer>
+
          <!-- New Section for Opinions -->
     <div class="opinions-section">
         <h3>Wanna Share Your Opinions?</h3>
         <a href="surveys.html" class="btn">Take the Survey</a>
     </div>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2024 Adi's Football Corner. All rights reserved. Designed with ❤️ by Adi.</p>
-    </footer>
 
     <!-- Scroll Animation JS -->
     <script>
@@ -98,6 +98,7 @@
 
 <!-- Scroll to Top Button -->
 <button id="scrollToTopBtn" title="Go to top">↑</button>
+
 
 <script src="info.js"></script>
 
