--- a/players.html
+++ b/players.html
@@ -252,7 +252,10 @@
     </div>
 </section>
 
-
+ <!-- Footer -->
+ <footer class="footer">
+    <p>&copy; 2024 Adi's Football Corner. All rights reserved. Designed with ❤️ by Adi.</p>
+</footer>
 
     <script src="players.js"></script>
 </body>
